# neuracore_types

./: .bumpversion.cfg  .pre-commit-config.yaml  neuracore-dictionary.txt  package.json  pyproject.toml
.github/workflows/: deploy-centralized.yaml  generate-and-publish-centralized.yaml  generate-and-publish.yaml  pr-changelog-reminder.yaml  pre-commit.yaml  release.yaml
changelogs/: pending-changelog.md
neuracore_types/: __init__.py  hardware.py  index.ts  neuracore_types.proto  neuracore_types.py  neuracore_types.ts  neuracore_types_pb.d.ts  neuracore_types_pb.js  preprocessing.py
neuracore_types/batched_nc_data/: __init__.py  batched_camera_data.py  batched_nc_data.py  batched_point_cloud_data.py  batched_suction_gripper_active_data.py
neuracore_types/dataset/: dataset.py
neuracore_types/endpoints/: __init__.py  endpoint_requests.py  endpoint_types.py
neuracore_types/episode/: episode.py
neuracore_types/importer/: config.py  data_config.py  transform.py
neuracore_types/nc_data/: __init__.py  camera_data.py  custom_1d_data.py  end_effector_pose_data.py  joint_data.py  nc_data.py  parallel_gripper_open_amount_data.py  point_cloud_data.py  pose_data.py  suction_gripper_active_data.py
neuracore_types/synchronization/: synchronization.py
neuracore_types/training/: training.py  training_requests.py
neuracore_types/upload/: upload.py
neuracore_types/utils/: numpy_array.py
scripts/: generate_protos.py
tests/unit/: test_endpoint_requests.py  test_neuracore_types.py  test_preprocessing.py
tests/unit/importer/: test_config.py  test_transform.py
(+10 files in other folders)
