[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuracore-types"
version = "8.0.0"
description = "Shared type definitions for Neuracore."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Neuracore"}
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=2.0.0",
    "scipy",
    "pillow",
    "names_generator",
    "pydantic-to-typescript2>=1.0.0",
    "grpcio-tools",
    "ordered_set"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest"
]
ml = [
    "torch==2.10.0",
    "transformers==4.53.2",
    "huggingface-hub"
]

[tool.hatch.build.targets.wheel]
packages = ["neuracore_types"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
